--- a/frontend/ApiFrontEnd/src/app/pages/comprobantes-fiscales/comprobantes-fiscales.html
+++ b/frontend/ApiFrontEnd/src/app/pages/comprobantes-fiscales/comprobantes-fiscales.html
@@ -1,1 +1,6 @@
-<p>comprobantes-fiscales works!</p>
+<div class="container">
+    <!-- Listado -->
+     <div>
+        <app-listado-comprobantes-fiscales [comprobantes]="comprobantes" />
+     </div>
+  </div>
