--- a/frontend/ApiFrontEnd/src/app/pages/comprobantes-fiscales/components/listado-comprobantes-fiscales/listado-comprobantes-fiscales.html
+++ b/frontend/ApiFrontEnd/src/app/pages/comprobantes-fiscales/components/listado-comprobantes-fiscales/listado-comprobantes-fiscales.html
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            @for (c of comprobantes; track c.id){
+            @for (c of comprobantes; track $index){
             <tr>
             <td>{{ c.ncf }}</td>
             <td>{{ c.monto }}</td>
