--- a/frontend/ApiFrontEnd/src/app/pages/contribuyentes/components/listado-contribuyentes/listado-contribuyentes.html
+++ b/frontend/ApiFrontEnd/src/app/pages/contribuyentes/components/listado-contribuyentes/listado-contribuyentes.html
@@ -22,7 +22,7 @@
                 </tr>
             </thead>
             <tbody>
-                @for (c of contribuyentes; track c.id){
+                @for (c of contribuyentes; track c.rncCedula){
                 <tr>
                 <td class="text-center">
                     <input 
